# GameEngineSandbox

./: .gitmodules  CMakeLists.txt  README.md  generate_win32.ps1  pipeline.ps1
dependencies/: CMakeLists.txt
dependencies/engine/: CMakeLists.txt
dependencies/engine/application/source/uwp/: GLPage.h
dependencies/engine/filesystem/source/common/: FileSystem.cpp
dependencies/engine/filesystem/source/uwp/: File.cpp
dependencies/engine/source/win32/: Win32Application.cpp
dependencies/engine/url/: CMakeLists.txt
dependencies/engine/url/include/common/url/: UrlParser.h
dependencies/engine/url/source/uwp/: UrlParser.cpp
dependencies/engine/url/source/win32/: UrlParser.cpp
dependencies/engine/url/tests/include/common/url/: tests.hpp
dependencies/pipeline/: functions.cmake
dependencies/pipeline/uwp/: TemporaryKey.pfx  package.console.appxManifest.in
dependencies/tests/: CMakeLists.txt
dependencies/tests/source/common/: main.cpp
dependencies/utilities/: CMakeLists.txt
snake/source/common/game/: Game.cpp
